--- a/wlc-api/pom.xml
+++ b/wlc-api/pom.xml
@@ -76,7 +76,7 @@
       <groupId>com.palmergames.bukkit.towny</groupId>
       <artifactId>towny</artifactId>
       <version>0.101.1.0</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
