--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,19 @@
             <version>0.101.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Spark Java -->
+<dependency>
+    <groupId>com.sparkjava</groupId>
+    <artifactId>spark-core</artifactId>
+    <version>2.9.4</version>
+</dependency>
+
+<!-- Gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.10.1</version>
+</dependency>
+
     </dependencies>
 </project>
